# Dilli

./: app.py  countries.json  forms.py  index.html  models.py  pyproject.toml  routes.py
.github/workflows/: generate-dots.yml
scripts/: generate-dots.js
static/css/: custom.css
static/js/: analytics.js  auth.js  dashboard.js
templates/: analytics.html  base.html  dashboard.html  index.html  integration.html  settings.html  submissions.html
templates/auth/: signin.html  signup.html
templates/components/: lateral_menu.html  waitlist_card.html
templates/email/: position_update.html
templates/integration/: custom_form.html  embed_form.html  leaderboard.html
